--- a/src/Shipwreck.VB6Models.Tests/Shipwreck.VB6Models.Tests.csproj
+++ b/src/Shipwreck.VB6Models.Tests/Shipwreck.VB6Models.Tests.csproj
@@ -9,6 +9,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Parsing\Form1.frm" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Parsing\Form1.frm">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0" />
     <PackageReference Include="xunit" Version="2.2.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
